# memuse

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  DESCRIPTION~  LICENSE  LICENSE.md  NAMESPACE  NAMESPACE~  README  README.md  README~  TODO  cleanup  configure  configure.ac  redocument
R/: 00-classes.r  000_globalVariables.r  00_classes.r  00_classes.r~  01-constructor.r  01-internal_constructor.r  01_constructor.r  01_constructor.r~  02-data.r  02_methods.r  02_methods.r~  03_accessor.r  accessors.r  approx.r  approx_size.r  arith.r  arith.r~  arithmetic.r  comparators.r  constructor.r  conv.r  converters.r  data.r  howbig.r  howbig.r~  howbig_par.r  howmany.r  howmany.r~  howmany_par.r  hr.r  meminfo.r  meminfo_process.r  memuse-package.R  misc.r  print.r  sum.r  sum.r~  swap.r  swap.r~  sysinfo.r  (+7 more)
data/: control.r  environment.r  environment.r~  numbers.r  times.r  units.r
demo/: 00Index  arithmetic.r  basics.r  demo.r  demo1.r  demo1_plain.r  demo2.r  demo2.r~  demo2_plain.r  demo3.r  demo3_plain.r  howbig.r  misc.r  sys.r
inst/: CITATION  CITATION~
man/: 00-memuse-package.Rd  00_fs_package.Rd  01-classes.Rd  01_classes.Rd  01_classes.Rd~  01_control.Rd~  02_control.Rd  02_envir.Rd~  03_envir.Rd  aa_constructor.Rd  aa_zzz_convert.Rd  ab_accessor.Rd  ab_convert.Rd  ab_print.Rd  ac_replacer.Rd  accessors.Rd  approx.size.Rd  arithmetic.Rd  ba_arithmetic.Rd  ba_print.Rd  ca_accessor.Rd  ca_swaps.Rd  cachelinesize.Rd  cachesize.Rd  cb_replacer.Rd  comparators.Rd  constructor.Rd  control.Rd  converters.Rd  da_arithmetic.Rd  db_reductions.Rd  hr.Rd  (+38 more)
(+101 files in other folders)
